syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.CA.gRPC";
option java_outer_classname = "BidirectionalStreamingProto";

service BidirectionalStreamingService
{
  // Bidirectional streaming RPC
  rpc bidirectionalStream(stream BidirectionalRequest) returns (stream BidirectionalResponse);
  rpc weatherForecast(stream WeatherForecastRequest) returns (stream WeatherForecastResponse);
}

//Refers bidirectionalStream
message BidirectionalRequest
{
  string message = 1;
}

message BidirectionalResponse
{
  string message = 1;
}

message ThermostatsResponse
{
  int32 responseTemp = 1;
}

//Refers WeatherForecast Service
message WeatherForecastRequest
{
  string message = 1;
}

message WeatherForecastResponse
{
  string message = 1;
}